--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+     Deezer
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,24 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Deezer</ion-title>
     </ion-toolbar>
   </ion-header>
+<div>
+  <ion-searchbar  type="text" placeholder="Artiste" (keyup.enter)="onSearchArtist($event)" animated></ion-searchbar>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+</div>
+
+
+<ion-card *ngFor="let artist of listArtist" >
+  <ion-card-header>
+    <ion-card-title>{{artist.name}}</ion-card-title>
+    <ion-card-subtitle>nombre d'album: {{artist.nb_album}}</ion-card-subtitle>
+  </ion-card-header>
+ <ion-img src="{{artist.picture}}"> </ion-img>
+  <ion-card-content>
+
+  </ion-card-content>
+  <ion-button expand="block" color="dark" style="margin-bottom: 20px;" (click)='onClickArtist(artist.name)'>Voir albums</ion-button>
+</ion-card>
 </ion-content>
